--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <p>(b)本公司保留随时修改本政策的权利，因此请经常查看。如对本政策作出重大更改，本公司会通过网站通知的形式告知。</p>
                         <p>方披露自己的个人信息，如联络方式或者邮政地址。请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。如您发现自己的个人信息泄密，尤其是本应用用户名及密码发生泄露，请您立即联络本应用客服，以便本应用采取相应措施
                         </p>
-                         <p>我们的邮箱：kaleiyalandak@yahoo.com
+                         <p>我们的邮箱：leloanhong00hsb@gmail.com
                         </p>
                         <br>
                         <br>
